// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Story Page A11y I can see the skip to content link 1`] = `"Ir al contenido"`;

exports[`AMP Story Page AMP Consent config 1`] = `
Object {
  "consents": Object {
    "user-consent": Object {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": Object {
    "default": Object {
      "timeout": Object {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": Object {
        "user-consent": Array [],
      },
    },
  },
}
`;

exports[`AMP Story Page AMP Geo config 1`] = `
Object {
  "AmpBind": true,
  "ISOCountryGroups": Object {
    "eea": Array [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": Array [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 1`] = `
Object {
  "text": "BBC News, Mundo",
  "url": "/mundo",
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 2`] = `
Object {
  "text": "Por qué puedes confiar en la BBC",
  "url": "https://www.bbc.com/mundo/institucional-51359666",
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 3`] = `
Object {
  "text": "Términos de uso",
  "url": "https://www.bbc.com/mundo/institucional-36400005",
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 4`] = `
Object {
  "text": "Sobre la BBC",
  "url": "https://www.bbc.com/mundo/institucional-36400007",
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 5`] = `
Object {
  "text": "Política de privacidad",
  "url": "https://www.bbc.com/mundo/institucional-36400009",
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 7`] = `
Object {
  "text": "Escribe a BBC Mundo",
  "url": "https://www.bbc.co.uk/mundo/send/u50853489",
}
`;

exports[`AMP Story Page Footer Anchors should match text and url 8`] = `
Object {
  "text": "Lee sobre nuestra postura acerca de enlaces externos.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Story Page Footer Cookie Settings Button should match text and on handler 1`] = `
Object {
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "AdChoices / Do Not Sell My Info",
}
`;

exports[`AMP Story Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/mundo"`;

exports[`AMP Story Page Footer I can see the footer copyright and external linking text 1`] = `"© 2023 BBC. La BBC no se hace responsable del contenido de sitios externos. Lee sobre nuestra postura acerca de enlaces externos."`;

exports[`AMP Story Page Header I can see the branding 1`] = `"BBC News, Mundo"`;

exports[`AMP Story Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "Noticias",
  "url": "/mundo",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "América Latina",
  "url": "/mundo/topics/c7zp57yyz25t",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Internacional",
  "url": "/mundo/topics/c2lej05epw5t",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "Hay Festival",
  "url": "/mundo/noticias-36795069",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "Economía",
  "url": "/mundo/topics/c06gq9v4xp3t",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "Ciencia",
  "url": "/mundo/topics/ckdxnw959n7t",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 7`] = `
Object {
  "text": "Salud",
  "url": "/mundo/topics/cpzd498zkxgt",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 8`] = `
Object {
  "text": "Cultura",
  "url": "/mundo/topics/c2dwq9zyv4yt",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 9`] = `
Object {
  "text": "Tecnología",
  "url": "/mundo/topics/cyx5krnw38vt",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 10`] = `
Object {
  "text": "Centroamérica Cuenta",
  "url": "/mundo/noticias-43826245",
}
`;

exports[`AMP Story Page Header Navigation link should match text and url 11`] = `
Object {
  "text": "BBC Extra",
  "url": "/mundo/noticias-48908206",
}
`;

exports[`AMP Story Page Image Caption should match text 1`] = `"Pie de foto, Llegó el día de la salida de Reino Unido de la UE."`;

exports[`AMP Story Page Image should match snapshot 1`] = `null`;

exports[`AMP Story Page Main heading should match text 1`] = `"Página no encontrada"`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/mundo/images/icons/icon-192x192.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-72x72.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-96x96.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-128x128.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-144x144.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-152x152.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-180x180.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-192x192.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-384x384.png",
}
`;

exports[`AMP Story Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/mundo/images/icons/icon-512x512.png",
}
`;

exports[`AMP Story Page SEO Canonical link 1`] = `"http://localhost:7080/mundo/noticias-internacional-51266689"`;

exports[`AMP Story Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Story Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Story Page SEO Heading level 1 1`] = `"Página no encontrada"`;

exports[`AMP Story Page SEO Lang attribute 1`] = `"es"`;

exports[`AMP Story Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "BackgroundNewsArticle",
      "about": Array [
        Object {
          "@type": "Thing",
          "name": "Europe",
          "sameAs": Array [
            "http://dbpedia.org/resource/Europe",
          ],
        },
        Object {
          "@type": "Thing",
          "name": "United Kingdom",
        },
        Object {
          "@type": "Thing",
          "name": "Culture",
          "sameAs": Array [
            "http://dbpedia.org/resource/Culture",
          ],
        },
        Object {
          "@type": "Thing",
          "name": "European Union",
          "sameAs": Array [
            "http://dbpedia.org/resource/European_Union",
          ],
        },
        Object {
          "@type": "Thing",
          "name": "Economics",
          "sameAs": Array [
            "http://dbpedia.org/resource/Economy",
          ],
        },
        Object {
          "@type": "Thing",
          "name": "Brexit",
          "sameAs": Array [
            "http://dbpedia.org/resource/Brexit",
          ],
        },
      ],
      "author": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
          "width": 1024,
        },
        "name": "BBC News Mundo",
        "noBylinesPolicy": "https://www.bbc.com/mundo/institucional-51359666#authorexpertise",
      },
      "dateModified": "2020-01-31T23:08:08.000Z",
      "datePublished": "2020-01-30T06:35:49.000Z",
      "description": "Tras casi cuatro años de desacuerdos y negociaciones, este viernes Reino Unido dejará formalmente la Unión Europea. ¿Qué cambios supone esto para quienes quieran hacer turismo, estudiar o trabajar en Reino Unido?",
      "headline": "Brexit: qué cambiará para visitar, trabajar y estudiar en Reino Unido tras la salida del país de la Unión Europea",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_mundo/17D42/production/_110620679_gettyimages-542984918.jpg",
        "width": 1024,
      },
      "inLanguage": Object {
        "@type": "Language",
        "alternateName": "es",
        "name": "Spanish",
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/mundo/noticias-internacional-51266689",
        "@type": "WebPage",
        "name": "Brexit: qué cambiará para visitar, trabajar y estudiar en Reino Unido tras la salida del país de la Unión Europea",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/mundo.png",
          "width": 1024,
        },
        "name": "BBC News Mundo",
        "publishingPrinciples": "https://www.bbc.com/mundo/institucional-51359666",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_mundo/17D42/production/_110620679_gettyimages-542984918.jpg",
      "url": "http://localhost:7080/mundo/noticias-internacional-51266689",
    },
  ],
}
`;

exports[`AMP Story Page SEO OG description 1`] = `"Tras casi cuatro años de desacuerdos y negociaciones, este viernes Reino Unido dejará formalmente la Unión Europea. ¿Qué cambios supone esto para quienes quieran hacer turismo, estudiar o trabajar en Reino Unido?"`;

exports[`AMP Story Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_mundo/17D42/production/_110620679_gettyimages-542984918.jpg"`;

exports[`AMP Story Page SEO OG image alt 1`] = `"A person holding a union jack umbrella in front of Big Ben"`;

exports[`AMP Story Page SEO OG locale 1`] = `"es-005"`;

exports[`AMP Story Page SEO OG site name 1`] = `"BBC News Mundo"`;

exports[`AMP Story Page SEO OG title 1`] = `"Brexit: qué cambiará para visitar, trabajar y estudiar en Reino Unido tras la salida del país de la Unión Europea - BBC News Mundo"`;

exports[`AMP Story Page SEO OG type 1`] = `"article"`;

exports[`AMP Story Page SEO OG url 1`] = `"http://localhost:7080/mundo/noticias-internacional-51266689"`;

exports[`AMP Story Page SEO Page title 1`] = `"Página no encontrada - BBC News Mundo"`;

exports[`AMP Story Page SEO Robots meta tag 1`] = `"noindex,nofollow"`;

exports[`AMP Story Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Story Page SEO Twitter creator 1`] = `"@bbcmundo"`;

exports[`AMP Story Page SEO Twitter description 1`] = `"Página no encontrada"`;

exports[`AMP Story Page SEO Twitter image alt 1`] = `"A person holding a union jack umbrella in front of Big Ben"`;

exports[`AMP Story Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_mundo/17D42/production/_110620679_gettyimages-542984918.jpg"`;

exports[`AMP Story Page SEO Twitter site 1`] = `"@bbcmundo"`;

exports[`AMP Story Page SEO Twitter title 1`] = `"Página no encontrada - BBC News Mundo"`;
